--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "front": "cd client && npm start",
     "back": "nodemon server.js",
-    "dev": "concurently/ npm run front/ npm run back"
+    "dev": "concurrently \"npm run back\" \"npm run front\""
   },
   "author": "",
   "license": "ISC",
